fix: correcao de texto no head

--- a/desafio1/index.html
+++ b/desafio1/index.html
@@ -5,11 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Desafio 1 - JavaScrip Básico: entendendo getElementById()</title>
+    <title>Desafio 1 - JavaScrip Básico: explicando getElementById()</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-
-
 </head>
 
 <body>
@@ -39,7 +37,7 @@
     </div>
 
     <footer>
-        Tutorial complementar: "Javascript DOM #02 - GetElementById - indo muito além do básico" by <a
+        Tutorial complementar: "Javascript DOM #02 - getElementById - indo muito além do básico" by <a
             class="hoverFooter" href="https://youtu.be/p73ZohX37MI" target="_blank">Felipe Aguiar</a>
     </footer>
 
